--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,24 +1,24 @@
 body{
 	font-size:16px;
+	color: #dfdfdf;
 }
 section{
-	padding-top:15px;
-	padding-bottom: 15px;
+	padding-top: 3rem;
+	padding-bottom: 6rem;
 }
 
 h3{
 	padding-bottom:15px;
 }
 
-.intro-image{
+.avatar{
 	height:200px;
-	width:auto;
 	border-radius: 50%;	
 }
-.intro-description{
-	padding-top: 45px;
-}
 
+.intro-description{
+	padding-top: 1rem;
+}
 
 .social-container img{
 	max-width:100%;
@@ -26,4 +26,51 @@ h3{
 	padding-bottom:15px;
 }
 
+.project-figure {
+	margin: 0 auto 1rem auto;
+	max-height: 256px;
+	max-width: 256px;
+}
 
+.project-text {
+	text-align: justify;
+}
+
+.box {
+	background-color: transparent;
+	border: 2px solid rgba(7, 59, 79, 0.5);
+}
+
+.section-2 {
+	background: #063647;
+}
+
+.section-3 {
+	background-color: #052D3D;
+}
+
+.section-4 {
+	background-color: #0E282E;
+}
+
+.section-5 {
+	background-color: #6589A9;
+}
+
+.title {
+	color: #fff;
+	text-align: left;
+	margin-bottom: 2rem;
+}
+
+.thumbs-up i {
+	transform: scale(-1, 1);
+	bottom: 1rem;
+	right: 1rem;
+	font-size: 150px;
+	position: absolute;
+}
+
+#contact {
+	position: relative;
+}
