--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,7 +69,7 @@ a.nav-item:hover {
 
 .box {
 	background-color: transparent;
-	border: 2px solid #75737a;
+	border: 2px solid #9b9bd4;
 }
 
 .title {
