--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,8 @@ html, body{
 }
 
 a {
-    margin-top: -30px;
+    margin-top: -5px;
+    height:70px;
     font-family: "Montserrat";
     color: #8262FF;
 }
