--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 html, body{
   font-family: "Montserrat";
-	font-weight: bold;
+  font-weight: bold;
 	font-size:16px;
 	color: #fff;
 	background-color: #101010; 
@@ -23,14 +23,54 @@ a:hover {
 }
 
 b {
-  font-size:22px;
+  font-size:27px;
+  width: 190px;
   color: #8262FF;
 }
-
-c{
-  line-height: 0.1em;
-  margin: 10px
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+.containers {
+  position: relative;
+  width: 100%;
+}
+.containers:hover .image {
+  opacity: 0.3;
+}
+
+.containers:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  font-weight: bold;
+  color: #8262FF;
+  font-size: 20px;
+  padding: 16px 32px;
+}
+
+c {
+  font-weight: bold;
+  color: #8262FF;
+  font-size:11px;
+}
+
 section{
 	padding-top: 3rem;
 	padding-bottom: 3rem;
@@ -68,8 +108,23 @@ a.nav-item:hover {
 	border-radius: 0%;
 }
 
+.project-title{
+  font-size:25px;
+  color: #8262FF;
+
+}
+.projects{
+  border: 6px solid #8262FF ;
+  margin-left: 40px;
+	height:300px;
+	border-radius: 0%;
+}
+
 .intro-description{
 	padding-top: 1rem;
+}
+a.nav-right{
+  margin-right: 10px;
 }
 
 .social-container img{
@@ -161,7 +216,7 @@ h1 {
 
   .typed-out2{
         font-family: "Montserrat";
-	font-weight: bold;
+        font-weight: bold;
         margin-top: -2rem;
         margin-left: 3rem;
         overflow: hidden;
@@ -179,3 +234,8 @@ h1 {
     from { width: 0 }
     to { width: 27% }
     }
+
+    .boxed {
+      border: 1px solid #8262FF ;
+    }
+    
