--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,59 @@ c {
   font-size:11px;
 }
 
+#sections{
+
+  overflow: hidden;
+  white-space: nowrap;
+  margin-top: -300px;
+  margin-bottom: -70px;
+  color:#fff;
+  text-transform: uppercase;
+  font-size:36px;
+  font-weight:bold;
+  padding-top:200px;  
+  width:100%;
+  bottom:45%;
+  float: right;
+}
+#flip {
+  height:50px;
+  overflow:hidden;
+}
+
+#flip > div > div {
+  color:#fff;
+  padding:0px 12px;
+  height:45px;
+  margin-bottom:45px;
+  display:inline-block;
+}
+
+#flip div:first-child {
+  animation: show 7s linear infinite;
+}
+
+#flip div div {
+  background:#101010;
+}
+#flip div:first-child div {
+  background:#101010;
+}
+#flip div:last-child div {
+  background:#101010;
+}
+
+@keyframes show {
+  0% {margin-top:-270px;}
+  5% {margin-top:-180px;}
+  33% {margin-top:-180px;}
+  38% {margin-top:-90px;}
+  66% {margin-top:-90px;}
+  71% {margin-top:0px;}
+  99.99% {margin-top:0px;}
+  100% {margin-top:-270px;}
+}
+
 section{
 	padding-top: 3rem;
 	padding-bottom: 3rem;
